--- a/TurfeX/app/templates/home.html
+++ b/TurfeX/app/templates/home.html
@@ -25,6 +25,11 @@
 
 
         <section class="hero">
+            <video id="hero-bg-video" autoplay muted loop playsinline>
+                <source src="../static/assests/video_home.mp4" type="video/mp4">
+                <!-- fallback text in case video isn't supported -->
+                Your browser doesn’t support HTML5 video.
+            </video>
             <h1>TurfeX</h1>
             <p>
                 Connect with local players instantly. Find pickup games, discover courts,
